Convert 2 more test methods